[package]
name = "latanime-rs"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[dependencies]
worker    = { version = "0.7.5", features = ["d1"] }
scraper   = "0.26"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex     = "1.12"
once_cell = "1.21"
base64    = "0.22"
urlencoding = "2.1"

[dependencies.getrandom]
version  = "0.2"
features = ["js"]
